Revisão comunicação API
