# api/app.js
@@ -7,8 +7,7 @@ var logger = require('morgan');
 mongoose.connect(process.env.MONGODB_URL);
 
 const routerApidocs_routes = require('./routes/apidocs_routes');
-const routerHistoricos = require('./routes/router_historicos');
-const usersRouter_historicos = require ('./routes/router_historicos')
+const routerHistorico = require('./routes/router_historico');
 
 var app = express();
 
@@ -17,8 +16,7 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 
-app.use('/users_routes', usersRouter_historicos);
 app.use('/api-docs_routes', routerApidocs_routes);
-app.use('/historicos', routerHistoricos);
+app.use('/historico', routerHistorico);
 
 module.exports = app;
