# api/swagger.yaml
@@ -3,23 +3,21 @@ info:
   title: API Hitorico de Fazendas
   version: 0.1
 tags:
-  - historicos
+  - historico
 paths:
   /historicos:
     get:
       tags:
-        - historicos
+        - historico
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ArrayOfHistoricos'
-      security:
-        - JWTAuth: []
+                $ref: '#/components/schemas/ArrayOfHistorico'
     post:
       tags:
-        - historicos
+        - historico
       requestBody:
         content:
           application/json:
@@ -36,10 +34,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Mensagem'
-  /fazendas/{id}:
+  /historico/{id}:
     get:
       tags:
-        - historicos
+        - historico
       parameters:
         - in: path
           type: string
@@ -62,7 +60,7 @@ paths:
                 $ref: '#/components/schemas/Mensagem'
     put:
       tags:
-        - historicos
+        - historico
       parameters:
         - in: path
           type: string
@@ -100,11 +98,11 @@ paths:
                 $ref: '#/components/schemas/Mensagem'
 components:
   schemas:
-    ArrayOfFazendas:
+    ArrayOfHistorico:
       type: array
       items:
         $ref: '#/components/schemas/Historico'
-    Fazenda:
+    Historico:
       type: object
       properties:
         nome:
@@ -116,8 +114,3 @@ components:
       properties:
         msg:
           type: string
-  securitySchemes: 
-    JWTAuth:
-      type: apiKey
-      in: header
-      name: Authorization
